--- a/public/t2a26mlsysbook-ai-aden.html
+++ b/public/t2a26mlsysbook-ai-aden.html
@@ -1,2 +1,8 @@
 
-Screenshot_3-12-2024_135657_mlsysbook.ai.jpeg
+ <title>t2a26mlsysbook-ai-aden.html</title>
+
+december 3rd
+<a href="https://ibb.co/z6PcVYy"><img src="https://i.ibb.co/kmqn2fR/Screenshot-3-12-2024-135657-mlsysbook-ai.jpg" alt="Screenshot-3-12-2024-135657-mlsysbook-ai" border="0"></a> 
+
+
+<li><a href="https://mlsysbook.ai/contents/core/conclusion/conclusion.html">20 Conclusions</a></li>
