--- a/public/t2a26mlsysbook-ai-aden.html
+++ b/public/t2a26mlsysbook-ai-aden.html
@@ -1,7 +1,7 @@
 
  <title>t2a26mlsysbook-ai-aden.html</title>
 
-december 3rd
+december 3rd 2024
 <a href="https://ibb.co/z6PcVYy"><img src="https://i.ibb.co/kmqn2fR/Screenshot-3-12-2024-135657-mlsysbook-ai.jpg" alt="Screenshot-3-12-2024-135657-mlsysbook-ai" border="0"></a> 
 
 
