--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@ Aden
         <li><a href="t2a23-game-template-aden.html">t2a23-game-template-aden.html</a></li>
          <li><a href="t2a24-browser-hack-aden.html">t2a24-browser-hack-aden.html</a></li>
            <li><a href="t2a26mlsysbook-ai-aden.html">t2a26mlsysbook-ai-aden.html</a></li>
-         <li><a href="t2a27-consttruck2.capx.backup1">t2a27-consttruck2.capx.backup1</a></li>
+         <li><a href="t2a27-consttruck2.capx.backup1.html">t2a27-consttruck2.capx.backup1.html</a></li>
     </ul>
 
     <h2>X Assignments</h2>
