--- a/public/index.html
+++ b/public/index.html
@@ -85,6 +85,7 @@ Aden
          <li><a href="t2a24-browser-hack-aden.html">t2a24-browser-hack-aden.html</a></li>
            <li><a href="t2a26mlsysbook-ai-aden.html">t2a26mlsysbook-ai-aden.html</a></li>
          <li><a href="con1">con1</a></li>
+         <li><a href="Final-project.html">Final-project.html</a></li>
     </ul>
 
     <h2>X Assignments</h2>
