--- a/public/Final-project.html
+++ b/public/Final-project.html
@@ -1,3 +1,5 @@
  <li><a href="Final-project-1-Aden.html">Level 1 template</a></li>
-
- 
+<li><a href="http://localhost:50000/">Level 1 main game</a></li>
+<li><a href="http://localhost:50000/">Level 2 main game</a></li>
+<li><a href="http://localhost:50000/">Level 3 main game</a></li>
+<li><a href="http://localhost:50000/">Level 4 main game working on now</a></li> 
