--- a/public/Final-project.html
+++ b/public/Final-project.html
@@ -1,2 +1,2 @@
  <li><a href="Final-project-1-Aden.html">Level 1 template</a></li>
-<li><a href="New project">main game</a></li>
+<li><a href="Main game">main game</a></li>
