--- a/public/Final-project.html
+++ b/public/Final-project.html
@@ -1,2 +1,2 @@
  <li><a href="Final-project-1-Aden.html">Level 1 template</a></li>
-<li><a href="Main game">Main game1</a></li>
+<li><a href="Main game1">Main game</a></li>
