--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,7 @@ Aden
         <li><a href="timer-time.html">timer-time.html</a></li>
         <li><a href="snake.html">snake.html</a></li>
      <li><a href="something.html">something.html</a></li>
+      <li><a href="how-to-be-a-potato.html">how-to-be-a-potato.html</a></li> 
      </ol>
 </body>
 
