--- a/public/index.html
+++ b/public/index.html
@@ -97,6 +97,7 @@ Aden
         <li><a href="snake.html">snake.html</a></li>
      <li><a href="something.html">something.html</a></li>
       <li><a href="how-to-be-a-potato.html">how-to-be-a-potato.html</a></li> 
+       <li><a href="Clicker.html">Clicker.html</a></li> 
      </ol>
 </body>
 
