--- a/public/index.html
+++ b/public/index.html
@@ -98,6 +98,7 @@ Aden
      <li><a href="something.html">something.html</a></li>
       <li><a href="how-to-be-a-potato.html">how-to-be-a-potato.html</a></li> 
        <li><a href="Clicker.html">Clicker.html</a></li> 
+       <li><a href="Riddle.html">Riddle.html</a></li>
      </ol>
 </body>
 
