--- a/public/index.html
+++ b/public/index.html
@@ -83,6 +83,7 @@ Aden
         <li><a href="t2a22-local-storage-aden.html">t2a22-local-storage-aden.html</a></li>
         <li><a href="t2a23-game-template-aden.html">t2a23-game-template-aden.html</a></li>
          <li><a href="t2a24-browser-hack-aden.html">t2a24-browser-hack-aden.html</a></li>
+        <li><a href="t2a25-storyboard-Aden.html">t2a25-storyboard-Aden.html</a></li>
            <li><a href="t2a26mlsysbook-ai-aden.html">t2a26mlsysbook-ai-aden.html</a></li>
          <li><a href="con1">con1</a></li>
          <li><a href="Final-project.html">Final-project.html</a></li>
