--- a/public/t2a25-storyboard-Aden.html
+++ b/public/t2a25-storyboard-Aden.html
@@ -1,4 +1,51 @@
-i made a platformer game where there are 5 levels each one having new things added to them to make them diffrent like moving platforms, enemies, movable block and more. 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Platformer Game Description</title>
+    <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f0f0;
+            margin: 0;
+            padding: 20px;
+        }
 
-and for my level select is diffrent because it cant work as links cause if it was it will only show up as the starting level or what i last opened on constuct 2 so i 
-made a button to take you to a level select to each level
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            text-align: center;
+        }
+
+        .description {
+            width: 100%;
+            height: 150px;
+            margin-bottom: 20px;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            font-size: 16px;
+            resize: none;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>My Platformer Game</h1>
+        <textarea class="description" readonly>
+            I made a platformer game where there are 5 levels, each one having new things added to them to make them different like moving platforms, enemies, movable blocks, and more.
+
+            My level select is different because it can't work as links. If it were, it would only show up as the starting level or what I last opened in Construct 2. So, I made buttons to take you to the level select for each level.
+        </textarea>
+    </div>
+</body>
+</html>
