--- a/public/Clicker.html
+++ b/public/Clicker.html
@@ -71,6 +71,18 @@
                 <p id="thousandUpgradeStatus">Upgrade Level: 0</p>
             </div>
             <div>
+                <button id="tenThousandUpgradeButton">Upgrade Click +10,000 (Cost: 100,000 Points)</button>
+                <p id="tenThousandUpgradeStatus">Upgrade Level: 0</p>
+            </div>
+            <div>
+                <button id="hundredThousandUpgradeButton">Upgrade Click +100,000 (Cost: 1,000,000 Points)</button>
+                <p id="hundredThousandUpgradeStatus">Upgrade Level: 0</p>
+            </div>
+            <div>
+                <button id="millionUpgradeButton">Upgrade Click +1,000,000 (Cost: 10,000,000 Points)</button>
+                <p id="millionUpgradeStatus">Upgrade Level: 0</p>
+            </div>
+            <div>
                 <button id="autoClickButton">Auto Clicker (Cost: 50 Points)</button>
                 <p id="autoClickStatus">Auto Clicker Active: No</p>
             </div>
@@ -119,6 +131,39 @@
                 points -= 10000;
                 clickValue += 1000;
                 document.getElementById('thousandUpgradeStatus').innerText = `Upgrade Level: ${clickValue - 1001}`;
+                updatePointsDisplay();
+            } else {
+                alert('Not enough points to upgrade!');
+            }
+        });
+
+        document.getElementById('tenThousandUpgradeButton').addEventListener('click', () => {
+            if (points >= 100000) {
+                points -= 100000;
+                clickValue += 10000;
+                document.getElementById('tenThousandUpgradeStatus').innerText = `Upgrade Level: ${clickValue - 10001}`;
+                updatePointsDisplay();
+            } else {
+                alert('Not enough points to upgrade!');
+            }
+        });
+
+        document.getElementById('hundredThousandUpgradeButton').addEventListener('click', () => {
+            if (points >= 1000000) {
+                points -= 1000000;
+                clickValue += 100000;
+                document.getElementById('hundredThousandUpgradeStatus').innerText = `Upgrade Level: ${clickValue - 100001}`;
+                updatePointsDisplay();
+            } else {
+                alert('Not enough points to upgrade!');
+            }
+        });
+
+        document.getElementById('millionUpgradeButton').addEventListener('click', () => {
+            if (points >= 10000000) {
+                points -= 10000000;
+                clickValue += 1000000;
+                document.getElementById('millionUpgradeStatus').innerText = `Upgrade Level: ${clickValue - 1000001}`;
                 updatePointsDisplay();
             } else {
                 alert('Not enough points to upgrade!');
